--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "author": "rot1024 <aayhrot@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "cross-env NODE_ENV=test karma start",
-    "test:cov": "cross-env NODE_ENV=coverage karma start",
+    "test": "cross-env NODE_ENV=test jest --coverage",
     "clean": "del dist coverage examples/build",
     "lint": "eslint *.js src",
     "build": "run-p build:es build:cjs build:umd build:umd:min",
@@ -44,9 +43,10 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@storybook/react": "^4.0.0-alpha.23",
+    "babel-core": "^7.0.0-bridge",
     "babel-eslint": "^10.0.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
-    "babel-plugin-istanbul": "^5.0.1",
     "cesium": "^1.46.1",
     "classnames": "^2.2.6",
     "copy-webpack-plugin": "^4.5.2",
@@ -57,19 +57,13 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^21.22.1",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-react": "^7.11.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-include-assets-plugin": "^1.0.5",
     "html-webpack-plugin": "^3.2.0",
-    "jasmine-core": "^3.1.0",
-    "karma": "^2.0.4",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage": "^1.1.2",
-    "karma-jasmine": "^1.1.2",
-    "karma-rollup-preprocessor": "^6.0.0",
-    "karma-source-map-support": "^1.3.0",
+    "jest": "^23.6.0",
     "npm-run-all": "^4.1.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.14.3",
