--- a/example/package.json
+++ b/example/package.json
@@ -11,21 +11,36 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.7.3",
+    "@types/react-dom": "^16.0.9",
+    "@types/webpack": "^4.4.19",
+    "acorn-jsx": "^5.0.0",
     "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "eslint": "^5.8.0",
     "eslint-plugin-react": "^7.11.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "fork-ts-checker-webpack-plugin": "^0.4.15",
+    "hard-source-webpack-plugin": "^0.12.0",
     "html-webpack-include-assets-plugin": "^1.0.6",
     "html-webpack-plugin": "^3.2.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "thread-loader": "^1.2.0",
+    "typescript": "^3.1.6",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@types/node": "^10.12.5",
     "cesium": "^1.50.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-hot-loader": "^4.3.11",
+    "cesium-react": "^0.2.2",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-smart-import": "^0.7.6",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-hot-loader": "^4.3.12",
     "resium": "^0.2.2"
   }
 }
